# gnoci

./: Cargo.toml  README.md  gnoci.toml
.github/workflows/: ci.yml
src/: builder_ext.rs  dpkg.rs  lib.rs  main.rs  rpm.rs
tests/: it.rs
tests/fixtures/capabilities/: gnoci.toml
tests/fixtures/capabilities-almalinux/: gnoci.toml
tests/fixtures/curl-almalinux/: gnoci.toml
tests/fixtures/curl-ubuntu/: gnoci.toml
