[package]
name = "gnoci"
version = "0.1.5"
description = "Small OCI image builder"
homepage = "https://github.com/tofay/gnoci"
repository = "https://github.com/tofay/gnoci"
documentation = "https://docs.rs/gnoci"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
console = "0.16.0"
env_logger = "0.11.8"
indexmap = { version = "2.9.0", features = ["serde"] }
indicatif = "0.18.0"
indicatif-log-bridge = "0.2.3"
lddtree = "0.3.8"
log = "0.4.27"
oci-spec = "0.8.2"
ocidir = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
toml = "0.9.2"
xattr = "1.5.0"

[dev-dependencies]
tempfile = "3.20.0"
test-temp-dir = "0.4.0"
